recursion.hanoi.lessons.recursion.hanoi.InterleavedHanoi.scala.code
def interleavedHanoi(height:Int, src1:Int, src2:Int, other:Int, dst:Int) {
  
  height match {
    
    case 1 => {
      move src1 dst
      move src2 dst
    }
    
    case n => {
      hanoi src1 
    }
  }
}